haxe-plugin/src/test/resources/testData/annotation.semantic/NullTAssignment2.hx
class TypedefNullTAssignment {
  <error descr="Incompatible type Null<Int> can't be assigned from String">var a:Null<Int> = "String";</error>
}
typedef Null<T> = T;
